Adding route config

--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -88,6 +88,15 @@
                                         </label>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" value="" ng-model="customerLead.routeConfigEnabled"/>
+                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                            RouteConfig
+                                        </label>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <div class="form-group">
