--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -40,6 +40,8 @@
                 <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erpEnabled}}</td>
                 <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gpsEnabled}}</td>
                 <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.loadEnabled}}</td>
+                <td data-title="'RouteConfig'" sortable="'routeconfig'" class="clickable-item">{{customer.routeConfigEnabled}}</td>
+
                 <td class="col-xs-2" data-title="'Lead Status'">
                     {{customer.leadStatus}}
                 </td>
