--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -58,8 +58,9 @@
                 <td data-title="'SMS/Email'" sortable="'smsEnabled'" class="clickable-item">
                     {{owners.smsEnabled ?'YES':'NO'}}
                 </td>
-
-
+                <td data-title="'RouteConfig'" sortable="'routeConfigEnabled'" class="clickable-item">
+                    {{owners.routeConfigEnabled ?'YES':'NO'}}
+                </td>
                 <td data-title="'Status'" sortable="'isActive'" class="clickable-item">
                     {{owners.isActive?'Enabled':'Disabled'}}
                 </td>
