--- a/client/views/partials/admin/customers/editUpdateTruckOwner.html
+++ b/client/views/partials/admin/customers/editUpdateTruckOwner.html
@@ -152,6 +152,15 @@
                                         </label>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" value="" ng-model="truckOwner.routeConfigEnabled"/>
+                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                            Route Config
+                                        </label>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <div class="form-group styling-input-list">
