Setting map default location

--- a/client/views/partials/routeConfig/addRouteConfig.html
+++ b/client/views/partials/routeConfig/addRouteConfig.html
@@ -43,7 +43,7 @@
             <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyBcXKj1iAjyIin_j2vbiCqke1oDLGgIsAM"
                  map-lazy-load-params="{{googleMapsUrl}}">
 
-                <ng-map center="17.3850,78.4867" zoom="13"></ng-map>
+                <ng-map center="{{accountHomeLocation}}" zoom="12"></ng-map>
             </div>
         </script>
 
