--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -54,6 +54,9 @@
             <td data-title="'Installed By'" sortable="'installedBy'" class="clickable-item">
                 {{device.installedBy.userName}}
             </td>
+            <td data-title="'Truck No'" sortable="'installedBy'" class="clickable-item">
+                {{device.truckNo || "--"}}
+            </td>
             <!--<td data-title="'Payment'" sortable="'received'" class="clickable-item">
                 {{device.received}}
             </td>-->
