--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -25,7 +25,7 @@
                     <li class="payble" ui-sref="byReceipts">
                         <span class="receivable">By Receipts</span> <br>
                         <small><i class="fa fa-inr"></i>
-                            {{totals.pendingDue || 0}}
+                            {{totals.receiptsAmount || 0}}
                         </small>
                     </li>
 
