--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -2137,3 +2137,29 @@ label > input:checked + img { /* (RADIO CHECKED) IMAGE STYLES */
 .routes{
     padding: 30px 0;
 }
+#top {
+    float:right;
+    width:39px;
+    margin-top:-35px;
+}
+#top {
+    transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    opacity: 0.5;
+    display:none;
+    cursor: pointer;
+}
+#top:hover {
+    opacity: 1;
+}
+.top{
+    font-size: 25px;
+    position: fixed;
+    background-color: #1E4495;
+    color: #fff;
+    padding: 5px 10px;
+    bottom: 20px;
+    right: 10px;
+}
