--- a/client/views/partials/reports/byReceipts.html
+++ b/client/views/partials/reports/byReceipts.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController"
-     ng-init="getRevenueByVehicle();getAllTrucks();">
+     ng-init="getRevenueByVehicle();getAllTrucks();getAmountByReceipts();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel activated payments" ui-sref="reports">
             <div class="reports-image">
@@ -25,7 +25,7 @@
                     <li class="payble activeLi" ui-sref="byReceipts">
                         <span class="receivable">By Receipts</span> <br>
                         <small><i class="fa fa-inr"></i>
-                            {{totals.pendingDue || 0}}
+                            {{totals.receiptsAmount || 0}}
                         </small>
                     </li>
 
@@ -124,7 +124,7 @@
 
         <div class="main-temp col-xs-12 mt-20">
             <div class="col-xs-12 pall-zero db-expenses">
-                <div class="col-xs-3 pall-zero"><p>Total Revenue</p></div>
+                <div class="col-xs-3 pall-zero"><p>Revenue By Receipts</p></div>
                 <div class="col-xs-9 pall-zero">
                     <ul class="list-inline report-expense">
                         <li class="filterFromDate">
@@ -182,17 +182,15 @@
                 </div>
             </div>
 
-            <table id="revenuelist"
+            <table id="amountByReceipts"
                    class="table table-bordered table-striped table-condensed table-hover"
                    cellspacing="0" width="100%">
-                <tfoot>
-                <tr>
-                    <th>Total</th>
-                    <th>{{totalRevenue.grossFreight}}</th>
-                    <th>{{totalRevenue.grossExpenses}}</th>
-                    <th>{{totalRevenue.grossRevenue}}</th>
-                </tr>
-                </tfoot>
+                <!--<tfoot>-->
+                <!--<tr>-->
+                    <!--<th>Total</th>-->
+                    <!--<th>{{totalRevenue.grossFreight}}</th>                   -->
+                <!--</tr>-->
+                <!--</tfoot>-->
             </table>
         </div>
     </div>
