--- a/client/views/partials/reports/revenueByvehicleId.html
+++ b/client/views/partials/reports/revenueByvehicleId.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getRevenueByParty();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel activated" ui-sref="reports">
+        <div class="reports-panel activated payments" ui-sref="reports">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -15,7 +15,7 @@
             </div>
             <div class="col-xs-12 pall-zero">
                 <ul class="list-inline">
-                    <li class="payble" ui-sref="reports">
+                    <li class="payble activeLi" ui-sref="reports">
                         <span class="payable">By Trips</span><br>
                         <small><i class="fa fa-inr"></i>
                             {{totals.totalRevenue}}
@@ -24,7 +24,7 @@
                     <li class="payble" ui-sref="byReceipts">
                         <span class="receivable">By Receipts</span> <br>
                         <small><i class="fa fa-inr"></i>
-                            {{totals.pendingDue || 0}}
+                            {{totals.receiptsAmount || 0}}
                         </small>
                     </li>
 
@@ -121,7 +121,7 @@
     <div class="col-xs-12">
 
         <div class="main-temp col-xs-12 mt-20">
-            <h3 class="db-title">Revenue - {{vehicleId}}:</h3>
+            <h3 class="db-title">Revenue By Trips- {{vehicleId}}:</h3>
 
             <table id="revenueByPartylist"
                    class="table table-bordered table-striped table-condensed table-hover"
