--- a/client/views/partials/settings/gpsSettings.html
+++ b/client/views/partials/settings/gpsSettings.html
@@ -1,63 +1,64 @@
 <div class="col-xs-12" ng-controller="GpsSettingsCrtl">
-    <div class="col-xs-12">
-        <div class="col-xs-12 profile-page">
-            <div class="col-xs-9 profile-tabs">
-                <div class="top-block">
-                    <ul class="list-inline">
-                        <li><a href="#" ui-sref="gpsSettings" class="activeProfileTab">GPS</a></li>
-                        <li><a href="#" ui-sref="reportsSettings">Reports</a></li>
-                    </ul>
-                </div>
+    <div class="col-xs-12 profile-page">
+        <div class="col-xs-9 profile-tabs">
+            <div class="top-block">
+                <ul class="list-inline">
+                    <li><a href="#" ui-sref="gpsSettings" class="activeProfileTab">GPS</a></li>
+                    <li><a href="#" ui-sref="reportsSettings">Reports</a></li>
+                </ul>
                 <div class="clearfix"></div>
-                <div class="col-xs-12 col-sm-6  mt-20">
-                    <div class="col-xs-12 pall-zero gps-settings">
-                        <h3>GPS Settings</h3>
-                        <div class="form-group">
-                            <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.idleTime"
-                                       class="form-control custom-form-control">
-                                <label class="focus-effect-for-input" aria-hidden="true">Min Stop Duration 10</label>
-                            </div>
-                            <div class="clearfix"></div>
+
+            </div>
+            <div class="col-xs-12 col-sm-6 pall-zero">
+                <div class="col-xs-12 pall-zero gps-settings">
+                    <h3>GPS Settings</h3>
+                    <div class="form-group">
+                        <div class="col-xs-12 styling-input-list">
+                            <input type="text" ng-model="gpsSettingsParams.idleTime"
+                                   class="form-control custom-form-control">
+                            <label class="focus-effect-for-input" aria-hidden="true">Min Stop Duration 10</label>
                         </div>
-                    </div>
-                    <div class="col-xs-12 pall-zero">
-                        <div class="form-group">
-                            <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.overSpeedLimit"
-                                       class="form-control custom-form-control">
-                                <label class="focus-effect-for-input" aria-hidden="true">Over Speed Limit KMPH</label>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 pall-zero">
-                        <div class="form-group">
-                            <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.routeNotificationInterval"
-                                       class="form-control custom-form-control">
-                                <label class="focus-effect-for-input" aria-hidden="true">Route Notification
-                                    Interval</label>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 pall-zero">
-                        <div class="form-group">
-                            <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.stopTime"
-                                       class="form-control custom-form-control">
-                                <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time</label>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 pall-zero">
-                        <button class="btn can last" ng-click="updateGpsSettings()" type="submit">Submit</button>
+                        <div class="clearfix"></div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 mt-20">
-                    <h3>Operating Routes</h3>
+                <div class="col-xs-12 pall-zero">
+                    <div class="form-group">
+                        <div class="col-xs-12 styling-input-list">
+                            <input type="text" ng-model="gpsSettingsParams.overSpeedLimit"
+                                   class="form-control custom-form-control">
+                            <label class="focus-effect-for-input" aria-hidden="true">Over Speed Limit KMPH</label>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 pall-zero">
+                    <div class="form-group">
+                        <div class="col-xs-12 styling-input-list">
+                            <input type="text" ng-model="gpsSettingsParams.routeNotificationInterval"
+                                   class="form-control custom-form-control">
+                            <label class="focus-effect-for-input" aria-hidden="true">Route Notification
+                                Interval</label>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 pall-zero">
+                    <div class="form-group">
+                        <div class="col-xs-12 styling-input-list">
+                            <input type="text" ng-model="gpsSettingsParams.stopTime"
+                                   class="form-control custom-form-control">
+                            <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time</label>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 pall-zero">
+                    <button class="btn can last" ng-click="updateGpsSettings()" type="submit">Submit</button>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6  gps-settings pall-zero">
+                <h3>Operating Routes</h3>
+                <div class="overFlow">
                     <div class="form-group pos-relative routes"
                          ng-repeat="operatingRoute in operatingRoutesList track by $index">
                         <div class="form-group col-sm-6 styling-input-list">
@@ -80,13 +81,14 @@
                                 <i class="fa fa-plus-square" aria-hidden="true"
                                    ng-click="addOperatingRoute()"></i></span>
                     </div>
-                    <div class="col-xs-12 pall-zero">
-                        <button class="btn can last" ng-click="updateOperatingRoutes()" type="submit">Submit</button>
-                    </div>
-
+                </div>
+                <div class="col-xs-12 pall-zero">
+                    <button class="btn can last" ng-click="updateOperatingRoutes()" type="submit">Submit</button>
                 </div>
 
             </div>
+            <div class="clearfix"></div>
+
         </div>
     </div>
 </div>
