--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -5,7 +5,7 @@
             <div class="col-xs-6 col-xs-12 mt-10">
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="driver.fullName" type="text" class="form-control custom-form-control"
                                id="fullName">
                         <label class="focus-effect-for-input" aria-hidden="true">Full Name*</label>
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="driver.mobile" type="number" class="form-control custom-form-control"
                                id="mobile">
                         <label class="focus-effect-for-input" aria-hidden="true">Contact Number*</label>
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 select-box">
+                    <div class="select-box">
                         <ui-select ng-model="driver.truckId" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a Truck" append-to-body="true">
@@ -36,27 +36,13 @@
                             </ui-select-choices>
                         </ui-select>
                     </div>
-                  <!--  <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input type="text" ng-model="truckRegNo"
-                               uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-no-results="noTrucks" typeahead-on-select="selectTruckId($item)"
-                               typeahead-select-on-exact="true" typeahead-select-on-blur="true" autocomplete="false"
-                               id="truckId" placeholder="Select Truck*">
-                        <div ng-show="noTrucks">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
-                    </div>-->
-
                 </div>
                 <div class="form-group col-xs-12">
 
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="driver.licenseNumber" type="text" class="form-control custom-form-control"
                                id="licenseNumber">
-                        <label class="focus-effect-for-input" aria-hidden="true">License Number*</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">License Number</label>
 
                     </div>
                 </div>
