--- a/client/views/partials/reports/byReceipts.html
+++ b/client/views/partials/reports/byReceipts.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController"
-     ng-init="getRevenueByVehicle();getAllTrucks();getAmountByReceipts();">
+     ng-init="getAmountByReceipts();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel activated payments" ui-sref="reports">
+        <div class="reports-panel activated payments">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
