--- a/client/views/partials/reports/expenseByVehicleId.html
+++ b/client/views/partials/reports/expenseByVehicleId.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getexpenseByVehicleId();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="reports">
+        <div class="reports-panel payments">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -120,7 +120,7 @@
     <div class="col-xs-12">
 
         <div class="main-temp col-xs-12 mt-20">
-            <h3 class="db-title">Expense - {{vehicleId}}:</h3>
+            <h3 class="db-title">Expense - {{vehicleId | uppercase}}:</h3>
 
             <table id="expenseByPartylist"
                    class="table table-bordered table-striped table-condensed table-hover"
