--- a/client/views/partials/reports/payableByParty.html
+++ b/client/views/partials/reports/payableByParty.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getPaybleByParty()">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="reports">
+        <div class="reports-panel payments">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
