--- a/client/views/partials/reports/receiptByPartyName.html
+++ b/client/views/partials/reports/receiptByPartyName.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController"
-     ng-init="getRevenueByVehicle();getAllTrucks();getAmountByReceipts();">
+     ng-init="getReceiptsAmountByParty();getAllTrucks();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel activated payments" ui-sref="reports">
+        <div class="reports-panel activated payments"   >
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -124,73 +124,17 @@
 
         <div class="main-temp col-xs-12 mt-20">
             <div class="col-xs-12 pall-zero db-expenses">
-                <div class="col-xs-3 pall-zero"><p>Revenue By Receipts</p></div>
-                <div class="col-xs-9 pall-zero">
-                    <ul class="list-inline report-expense">
-                        <li class="filterFromDate">
-                            <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'"
-                                         class="'textfield'">
-                            </date-picker>
-                        </li>
-                        <li class="filterToDate">
-                            <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'"
-                                         class="'textfield'"></date-picker>
-                        </li>
-                        <li class="filterToDate pall-zero pos-relative">
-                            <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                            <input type="text" ng-model="filters.regNumber"
-                                   uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
-                                   class="form-control textfield" typeahead-min-length="1"
-                                   typeahead-on-select="selectTruckId($item)"
-                                   ng-change="resetTruckName();"
-                                   typeahead-select-on-exact="true" placeholder="Registration Num"
-                                   typeahead-no-results="noTruck" autocomplete="false">
-
-                            <div ng-show="noTrucks">
-                                <i class="glyphicon glyphicon-remove red"></i>
-                                <span class="red"> No Results Found </span>
-                            </div>
-                        </li>
-                        <li class="col-xs-1">
-                            <button ng-click="validateFilters('revenue')" type="button" class="btn go">Go</button>
-                        </li>
-                    </ul>
-                    <ul class="list-inline mailDownload">
-                        <li>
-                            <button type="button" ng-click="shareRevenueDetailsByVechicleViaEmail()"
-                                    class="btn mailImage"><img src="images/Reports_Mail.png"></button>
-                        </li>
-
-                        <li>
-                            <button type="button" ng-click="downloadRevenueDetailsByVechicle();" class="btn mailImage">
-                                <img src="images/Reports_Download.png"></button>
-                        </li>
-                    </ul>
-                </div>
-                <div class="clearfix"></div>
-                <div>
-                    <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
-                        <ul>
-                            <li ng-repeat="error in filters.error">{{error}}</li>
-                        </ul>
-                    </div>
-                    <div class="alert alert-success" role="alert" ng-show="filters.success.length">
-                        <ul>
-                            <li ng-repeat="success in filters.success">{{success}}</li>
-                        </ul>
-                    </div>
-                </div>
+                <div class="col-xs-3 pall-zero"><p>Revenue by - {{partyName}}:</p></div>
             </div>
-
-            <table id="amountByReceipts"
+            <table id="bypartyNames"
                    class="table table-bordered table-striped table-condensed table-hover"
                    cellspacing="0" width="100%">
-                <!--<tfoot>-->
-                <!--<tr>-->
-                <!--<th>Total</th>-->
-                <!--<th>{{totalRevenue.grossFreight}}</th>                   -->
-                <!--</tr>-->
-                <!--</tfoot>-->
+                <tfoot>
+                <tr>
+                <th colspan="3" style="text-align: right;">Total</th>
+                <th><i class="fa fa-inr"></i> {{total}}</th>
+                </tr>
+                </tfoot>
             </table>
         </div>
     </div>
