--- a/client/views/partials/reports/revenueByvehicleId.html
+++ b/client/views/partials/reports/revenueByvehicleId.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getRevenueByParty();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel activated payments" ui-sref="reports">
+        <div class="reports-panel activated payments">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -121,7 +121,7 @@
     <div class="col-xs-12">
 
         <div class="main-temp col-xs-12 mt-20">
-            <h3 class="db-title">Revenue By Trips- {{vehicleId}}:</h3>
+            <h3 class="db-title">Revenue By Trip - {{vehicleId | uppercase}}:</h3>
 
             <table id="revenueByPartylist"
                    class="table table-bordered table-striped table-condensed table-hover"
