--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -3,18 +3,18 @@
         <h2 class="title-name ">{{pageTitle}}</h2>
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="form-group col-xs-12">
-                <div class="col-xs-12 styling-input-list">
+                <div class="styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-readonly="userType==='group'"
                            ng-disabled="userType==='group'" ng-model="truck.registrationNo"/>
                     <label class="focus-effect-for-input" aria-hidden="true">Truck Number *</label>
                 </div>
             </div>
             <div class="form-group col-xs-12">
-                <div class="col-xs-12 styling-input-list">
+                <div class="styling-input-list">
                     <ui-select ng-model="truck.truckType" theme="select2"
                                style="min-width: 390px;"
-                               title="Choose a Truck" append-to-body="true">
-                        <ui-select-match placeholder="Select a Truck*" class="form-control custom-form-control">
+                               title="Choose a Truck Type" append-to-body="true">
+                        <ui-select-match placeholder="Select a Truck Type*" class="form-control custom-form-control">
                             {{$select.selected.title || title}} , {{$select.selected.tonnes || tonnes}} Tonnes
                         </ui-select-match>
                         <ui-select-choices
@@ -29,20 +29,15 @@
                     </ui-select>
                 </div>
             </div>
-           <!-- <div class="form-group col-xs-12">
-                <div class="col-xs-12 styling-input-list">
-                    <input type="text" class="form-control custom-form-control" ng-model="truck.tonnage"/>
-                    <label class="focus-effect-for-input" aria-hidden="true">Tonnage</label>
-                </div>
-            </div>-->
+
             <div class="form-group col-xs-12">
-                <div class="col-xs-12 styling-input-list">
+                <div class="styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-model="truck.modelAndYear"/>
                     <label class="focus-effect-for-input" aria-hidden="true">Modal and Year</label>
                 </div>
             </div>
             <div class="form-group col-xs-12 ">
-                <div class="col-xs-12 select-box">
+                <div class="select-box">
                     <ui-select ng-model="truck.driverId" theme="select2"
                                style="min-width: 390px;"
                                title="Choose a person" append-to-body="true">
@@ -56,43 +51,35 @@
                     </ui-select>
                 </div>
             </div>
+            <div class="form-group col-xs-12">
+                <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
+                             class="'custom-form-control'" placeholder="'Fitness Expiry*'"></date-picker>
+            </div>
         </div>
         <div class="col-sm-6 col-xs-12 mt-10">
-
-            <div class="form-group col-xs-12 styling-input-list-trucks">
-                <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                              class="'custom-form-control'"></date-picker>
-                <label class="focus-effect-for-input-trucks" aria-hidden="true">Fitness Expiry</label>
-            </div>
-            <div class="form-group col-xs-12 styling-input-list-trucks">
+            <div class="form-group col-xs-12">
                 <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
-                           class="'custom-form-control'"></date-picker>
-                <label class="focus-effect-for-input-trucks" aria-hidden="true">Permit Due Expiry Date*</label>
-
+                           class="'custom-form-control'" placeholder="'Permit Due Expiry Date*'"></date-picker>
             </div>
-            <div class="form-group col-xs-12 styling-input-list-trucks">
-
+            <div class="form-group col-xs-12">
                 <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
-                            class="'custom-form-control'"></date-picker>
-                <label class="focus-effect-for-input-trucks" aria-hidden="true">Insurance Due Expiry Date*</label>
-
+                            class="'custom-form-control'" placeholder="'Insurance Due Expiry Date*'"></date-picker>
             </div>
-            <div class="form-group col-xs-12 styling-input-list-trucks">
+            <div class="form-group col-xs-12">
                 <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
-                            class="'custom-form-control'"></date-picker>
-                <label class="focus-effect-for-input-trucks" aria-hidden="true">Pollution Due Expiry Date*</label>
+                            class="'custom-form-control'" placeholder="'Pollution Due Expiry Date*'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true"></label>
 
             </div>
-            <div class="form-group col-xs-12 styling-input-list-trucks">
+            <div class="form-group col-xs-12">
                 <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
-                            class="'custom-form-control'"></date-picker>
-                <label class="focus-effect-for-input-trucks" aria-hidden="true">Tax Due Expiry Date*</label>
+                            class="'custom-form-control'" placeholder="'Tax Due Expiry Date*'"></date-picker>
 
             </div>
         </div>
         <div class="clearfix"></div>
 
-        <div class="col-sm-4 col-xs-push-4 margin-top-20">
+        <div class="col-xs-6 col-xs-push-3 margin-top-20">
             <div class="alert alert-danger" role="alert" ng-show="truck.errors.length">
                 <!--<strong>{{truck.error}}</strong>-->
                 <ul>
