--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -79,13 +79,13 @@
             </div>
 
             <div class="clearfix"></div>
-           <!-- <div class="col-xs-4 col-xs-push-4">
+            <div class="col-xs-6 col-xs-push-3">
                 <div class="alert alert-danger" role="alert" ng-show="driver.errors.length">
                     <ul>
                         <li ng-repeat="error in driver.errors">{{error}}</li>
                     </ul>
                 </div>
-            </div>-->
+            </div>
 
             <div class="col-xs-12">
                 <div class="col-xs-4 mtb-25 sub-can">
