--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -1,73 +1,86 @@
-
-        <div class="main-right col-xs-12" ng-controller="PaymentsCtrl">
-            <div class="col-xs-12 pall-zero mb-10">
-                <div class="col-sm-3 pall-zero"><h3>Payments</h3></div>
-                <div class="col-xs-8 col-xs-push-1 pall-zero">
-                    <div class="col-sm-8">
-                        <form>
-                        <div class="input-group stylish-input-group">
-                            <input type="text"  ng-model="partyName1"class="form-control" placeholder="Search By Party Name">
-                            <span class="input-group-addon">
-                                    <button type="submit" ng-click="searchByPartyName(partyName1);">
-                                          <i class="fa fa-search sear" aria-hidden="true"></i>
-                                    </button>
-                                </span>
+<div class="main-right col-xs-12" ng-controller="PaymentsCtrl">
+    <div class="col-xs-12 pall-zero mb-10">
+        <div class="col-sm-2 pall-zero"><h3>Payments:</h3></div>
+        <div class="col-sm-10 pall-zero ">
+            <ul class="list-inline ">
+                <li class="col-sm-3">
+                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
+                                ></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <form>
+                        <div class="">
+                            <input type="text" ng-model="partyName1" class="form-control"
+                                   placeholder="Search By Party Name">
                         </div>
-                        </form>
-                    </div>
-                    <div class="col-sm-4 pall-zero pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
-                            <option value="" selected>All Parties</option>
-                            <option ng-repeat="parties in partiesList">{{parties.name}}</option>
-                        </select>
-                    </div>
-                    </div>
-            </div>
-            <!--<div class="toolbar-button-div pull-right mb-10">-->
-                <!--<button class="btn  btn-blue pull-right" ng-click="goToEditPaymentsPage()">Add Payments</button>-->
-            <!--</div>-->
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentParams">
-                <tr ng-repeat="payments in currentPageOfPayments" style="text-align: center;">
-                    <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ payments.date |
-                        date:'MM-dd-yyyy'}}
-                    </td>
-                    <td data-title="'Party'" sortable="'partyName'" class="clickable-item">{{
-                        payments.attrs.partyName }}
-                    </td>                  
-                    <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{
-                        payments.amount }}
-                    </td>
-                    <td data-title="'Payment Type'" sortable="'paymentType'" class="clickable-item">{{
-                        payments.paymentType}}
-                    </td>
-                    <td data-title="'Payment Ref No'" sortable="'paymentRefNo'" class="clickable-item">{{
-                        payments.paymentRefNo || '---' }}
-                    </td>
-                    <td data-title="'Description'" sortable="'description'" class="clickable-item">{{
-                        payments.description || '---'}}
-                    </td>
-                    <td data-title="'Created By'" sortable="'createdByName'"
-                        class="clickable-item">{{ payments.attrs.createdByName }}
-                    </td>
-
-                    <td data-title="'Action'" class="">
-                        <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn" ng-click="goToEditPaymentsPage(payments._id)">
-                            <span class="glyphicon glyphicon-pencil"></span></a>
-
-                        <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn" ng-click="deletePaymentsRecord(payments._id)">
-
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </a>
-                    </td>
-                </tr>
-                <tr ng-if="!currentPageOfPayments || currentPageOfPayments.length === 0">
-                    <td colspan="8">No Payments Records exist.</td>
-                </tr>
-            </table>
-            <div class="add-image pull-right">
-                <figure>
-                    <a href="#" ng-click="goToEditPaymentsPage()"><img src="images/Add_Payments.png" alt="Add Payment" title="Add Payment"></a>
-                </figure>
-            </div>
+                    </form>
+                </li>
+                <li class="col-sm-1">
+                    <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
+                        <i class="fa fa-search sear" aria-hidden="true"></i>
+                    </button>
+                </li>
+                <li class="pall-zero pos-relative col-sm-2">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
+                        <option value="" selected>All Parties</option>
+                        <option ng-repeat="parties in partiesList">{{parties.name}}</option>
+                    </select>
+                </li>
+            </ul>
         </div>
+
+    </div>
+    <!--<div class="toolbar-button-div pull-right mb-10">-->
+    <!--<button class="btn  btn-blue pull-right" ng-click="goToEditPaymentsPage()">Add Payments</button>-->
+    <!--</div>-->
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentParams">
+        <tr ng-repeat="payments in currentPageOfPayments" style="text-align: center;">
+            <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ payments.date |
+                date:'MM-dd-yyyy'}}
+            </td>
+            <td data-title="'Party'" sortable="'partyName'" class="clickable-item">{{
+                payments.attrs.partyName }}
+            </td>
+            <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{
+                payments.amount }}
+            </td>
+            <td data-title="'Payment Type'" sortable="'paymentType'" class="clickable-item">{{
+                payments.paymentType}}
+            </td>
+            <td data-title="'Payment Ref No'" sortable="'paymentRefNo'" class="clickable-item">{{
+                payments.paymentRefNo || '---' }}
+            </td>
+            <td data-title="'Description'" sortable="'description'" class="clickable-item">{{
+                payments.description || '---'}}
+            </td>
+            <td data-title="'Created By'" sortable="'createdByName'"
+                class="clickable-item">{{ payments.attrs.createdByName }}
+            </td>
+
+            <td data-title="'Action'" class="">
+                <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn"
+                   ng-click="goToEditPaymentsPage(payments._id)">
+                    <span class="glyphicon glyphicon-pencil"></span></a>
+
+                <a href="#" ng-show="userType=='account' || userId==payments.createdBy" class="btn"
+                   ng-click="deletePaymentsRecord(payments._id)">
+
+                    <span class="glyphicon glyphicon-remove"></span>
+                </a>
+            </td>
+        </tr>
+        <tr ng-if="!currentPageOfPayments || currentPageOfPayments.length === 0">
+            <td colspan="8">No Payments Records exist.</td>
+        </tr>
+    </table>
+    <div class="add-image pull-right">
+        <figure>
+            <a href="#" ng-click="goToEditPaymentsPage()"><img src="images/Add_Payments.png" alt="Add Payment"
+                                                               title="Add Payment"></a>
+        </figure>
+    </div>
+</div>
