--- a/client/views/partials/receipts/receiptReceived.html
+++ b/client/views/partials/receipts/receiptReceived.html
@@ -1,27 +1,36 @@
 <div class="main-right col-xs-12" ng-controller="receiptCtrl" ng-init="getReceiptCount();">
     <div class="col-xs-12 pall-zero mb-10">
-        <div class="col-sm-3 pall-zero"><h3>Receipts</h3></div>
-        <div class="col-xs-8 col-xs-push-1 pall-zero">
-            <div class="col-sm-8">
-                <form>
-                    <div class="input-group stylish-input-group">
-                        <input type="text" ng-model="partyName1" class="form-control"
-                               placeholder="Search By Party Name">
-                        <span class="input-group-addon">
-                                    <button type="submit" ng-click="welcome();">
-                                          <i class="fa fa-search sear" aria-hidden="true"></i>
-                                    </button>
-                                </span>
-                    </div>
-                </form>
-            </div>
-            <div class="col-sm-4 pall-zero pos-relative">
-                <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
-                    <option value="" selected>All Parties</option>
-                    <option ng-repeat="parties in partiesList">{{parties.name}}</option>
-                </select>
-            </div>
+        <div class="col-sm-2 pall-zero"><h3>Receipts</h3></div>
+        <div class="col-sm-10 pall-zero ">
+            <ul class="list-inline ">
+                <li class="col-sm-3">
+                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
+                    ></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <form>
+                        <div class="">
+                            <input type="text" ng-model="partyName1" class="form-control"
+                                   placeholder="Search By Party Name" ng-change="searchByPartyName(partyName1)">
+                        </div>
+                    </form>
+                </li>
+                <li class="col-sm-1">
+                    <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
+                        <i class="fa fa-search sear" aria-hidden="true"></i>
+                    </button>
+                </li>
+                <li class="pall-zero pos-relative col-sm-2">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
+                        <option value="" selected>All Parties</option>
+                        <option ng-repeat="parties in partiesList">{{parties.name}}</option>
+                    </select>
+                </li>
+            </ul>
         </div>
     </div>
     <!--<div class="toolbar-button-div pull-right mb-10">-->
@@ -54,7 +63,7 @@
             </td>
         </tr>
         <tr ng-if="!currentPageOfReceipts || currentPageOfReceipts.length === 0">
-            <td colspan="8">No Receipts Records exist.</td>
+            <td colspan="6">No Receipts Records exist.</td>
         </tr>
     </table>
     <div class="add-image pull-right">
