--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -1,7 +1,7 @@
 <div class="main-right col-xs-12" ng-controller="ExpenseCtrl">
     <div class="col-xs-12 pall-zero mb-10">
-        <div class="col-sm-3 pall-zero"><h3>Expenses</h3></div>
-        <div class="col-xs-8 col-xs-push-1 pall-zero">
+        <div class="col-sm-2 pall-zero"><h3>Expenses:</h3></div>
+       <!-- <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
                 <form>
                 <div class="input-group stylish-input-group">
@@ -21,6 +21,37 @@
                     <option ng-repeat="truck in trucksList">{{truck.registrationNo}}</option>
                 </select>
             </div>
+        </div>-->
+        <div class="col-sm-10 pall-zero ">
+            <ul class="list-inline ">
+                <li class="col-sm-3">
+                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
+                    ></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
+                </li>
+                <li class="col-sm-3">
+                    <form>
+                        <div class="">
+                            <input type="text" ng-model="truckNumber1" class="form-control"
+                                   placeholder="Search By Party Name" ng-change="searchByVechicleNumber(truckNumber1)">
+                        </div>
+                    </form>
+                </li>
+                <li class="col-sm-1">
+                    <button type="submit" ng-click="searchByVechicleNumber(truckNumber1);" class="btn go">
+                        <i class="fa fa-search sear" aria-hidden="true"></i>
+                    </button>
+                </li>
+                <li class="pall-zero pos-relative col-sm-2">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <select class="form-control" ng-model="truckNumber" ng-change="searchByVechicleNumber(truckNumber);">
+                        <option value="" selected>All Vehicles</option>
+                        <option ng-repeat="truck in trucksList">{{truck.registrationNo}}</option>
+                    </select>
+                </li>
+            </ul>
         </div>
     </div>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
