--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -4,13 +4,13 @@
         <form class="mt-10">
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="">
                         <date-picker id="date" ban-future="'banFutureDate'" ng-model="expenseDetails.date"
                                      placeholder="'Date*'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 select-box">
+                    <div class=" select-box">
                         <ui-select ng-model="expenseDetails.vehicleNumber" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a Truck" append-to-body="true">
@@ -23,24 +23,9 @@
                             </ui-select-choices>
                         </ui-select>
                     </div>
-                    <!--<div class=" col-xs-12 pos-relative">-->
-                        <!--<span class="bot-arrow">-->
-                            <!--<i class="fa fa-angle-down" aria-hidden="true"></i>-->
-                        <!--</span>-->
-                        <!--<input type="text" ng-model="truckRegNo"-->
-                               <!--uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"-->
-                               <!--class="form-control custom-form-control"-->
-                               <!--typeahead-min-length="1" typeahead-on-select="selectTruckId($item)"-->
-                               <!--typeahead-select-on-exact="true"-->
-                               <!--placeholder="Vehicle Number*" typeahead-no-results="noTrucks" autocomplete="false">-->
-                        <!--<div ng-show="noTrucks">-->
-                            <!--<i class="glyphicon glyphicon-remove red"></i>-->
-                            <!--<span class="red"> No Results Found </span>-->
-                        <!--</div>-->
-                    <!--</div>-->
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 pos-relative">
+                    <div class=" pos-relative">
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
@@ -53,7 +38,7 @@
                 </div>
                 <div ng-show="expenseDetails.expenseType=='others'">
                     <div class="form-group col-xs-12">
-                        <div class="col-xs-12">
+                        <div class="">
                             <input type="text" ng-model="expenseDetails.expenseName"
                                    class="form-control custom-form-control" id="name" placeholder="Expense Type*">
 
@@ -65,7 +50,7 @@
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 trip-share">
+                    <div class=" trip-share">
                         <ul class="list-inline">
                             <li class="radio">
                                 <label>
@@ -90,7 +75,7 @@
                 </div>
                 <div ng-show="expenseDetails.mode == 'Credit'">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="">
                         <input type="text" ng-model="partyName"
                                uib-typeahead="party.name for party in partyBySupplier | filter:$viewValue"
                                class="form-control custom-form-control" typeahead-min-length="1"
@@ -104,7 +89,7 @@
                     </div>
                 </div>
                     <div class="form-group col-xs-12">
-                        <div class="col-xs-12 styling-input-list">
+                        <div class=" styling-input-list">
                             <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
                             <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
                         </div>
@@ -120,13 +105,13 @@
 
 
                 <div class="form-group col-xs-12" ng-show="expenseDetails.mode == 'Cash'">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class=" styling-input-list">
                         <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.cost"/>
                         <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class=" styling-input-list">
                         <input ng-model="expenseDetails.description" type="text"
                                class="form-control custom-form-control" id="description">
                         <label class="focus-effect-for-input" aria-hidden="true">Remarks</label>
@@ -136,7 +121,7 @@
             </div>
 
             <div class="clearfix"></div>
-            <div class="col-xs-4 col-xs-push-4">
+            <div class="col-xs-6 col-xs-push-3">
 
                 <div class="alert alert-danger" role="alert" ng-show="expenseDetails.error.length">
                     <ul>
