--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -4,7 +4,7 @@
         <form class="mt-10">
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="party.name" type="text" class="form-control custom-form-control"
                                id="accountId">
                         <label class="focus-effect-for-input" aria-hidden="true">Party Name*</label>
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="party.contact" type="number" class="form-control custom-form-control"
                                id="contactPhone">
                         <label class="focus-effect-for-input" aria-hidden="true">Contact Phone*</label>
@@ -20,17 +20,18 @@
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="party.email" type="email" class="form-control custom-form-control"
                                id="contactEmail">
-                        <label class="focus-effect-for-input" aria-hidden="true">Email*</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">Email</label>
 
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
-                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city" ng-change="searchCity()">
-                        <label class="focus-effect-for-input" aria-hidden="true">City*</label>
+                    <div class="styling-input-list">
+                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city"
+                               ng-change="searchCity()">
+                        <label class="focus-effect-for-input" aria-hidden="true">City</label>
 
                     </div>
                 </div>
@@ -59,12 +60,8 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-
             </div>
-
             <div class="col-xs-12 col-xs-6" ng-show="party.partyType == 'Transporter'">
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
@@ -110,7 +107,7 @@
                             </div>
                             <div class="col-xs-5 form-group pl4-pr0 styling-input-list">
                                 <input ng-model="tripLane.from" type="text" class="form-control custom-form-control"
-                                       id="from{{$index}}" ng-change="searchFrom($index)"      >
+                                       id="from{{$index}}" ng-change="searchFrom($index)">
                                 <label class="focus-effect-for-input" aria-hidden="true">From</label>
 
                             </div>
@@ -130,53 +127,8 @@
                     <button class="btn add-group mt-20" ng-click="addTripLane();">Add Trip Lanes</button>
                 </div>
             </div>
-
-            <!--   <div class="col-xs-12 col-xs-6">
-                <div class="form-group col-xs-12">
-                    <div class="col-xs-12 pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <select class="form-control custom-form-control">
-                            <option>Select Trip Lane</option>
-                            <option>Select One</option>
-                            <option>Select One</option>
-                        </select>
-                        <div class="pull-right">
-                            <button class="btn add-group mt-20" ng-click="addTripLane()">Add Trip Lane</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-                <form class="mt-10 add-trip-lane" >
-                    <div ng-show="showAddTripLane">
-                        <div class="form-group col-xs-12">
-                            <div class="col-xs-6">
-                                <input type="text" class="form-control custom-form-control" ng-model="tripLane.from"
-                                       id="from" placeholder="From">
-                            </div>
-                            <div class="col-xs-6">
-                                <input type="text" class="form-control custom-form-control" ng-model="tripLane.to"
-                                       id="to" placeholder="To">
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <div class="col-xs-12">
-                            <input ng-model="tripLane.name" type="text" class="form-control custom-form-control"
-                                   id="name" placeholder="Trip Lane Name">
-                            </div>
-                        </div>
-                        <div class="col-xs-12">
-                            <div class="col-xs-12">
-                            <button class="btn add-group pull-right">Add</button>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </form>
-
-            </div> -->
             <div class="clearfix"></div>
-            <div class="col-xs-4 col-xs-push-4">
+            <div class="col-xs-6 col-xs-push-3">
                 <div class="alert alert-danger" role="alert" ng-show="party.error.length">
                     <ul>
                         <li ng-repeat="error in party.error">{{error}}</li>
