--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -3,17 +3,15 @@
         <h2 class="title-name">{{pagetitle}}</h2>
         <form class="mt-10">
             <div class="col-xs-12 col-sm-6">
-                <div class="form-group col-xs-12">
+                <div class="form-group">
                     <div class="col-xs-12">
                         <date-picker id="date" ban-future="'banFutureDate'" ng-model="paymentsDetails.date"
                                      placeholder="'Date*'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-
-                    <div class="col-xs-12 select-box">
+                    <div class="select-box">
                         <ui-select ng-model="paymentsDetails.partyId" theme="select2"
-                                   style="min-width: 390px;"
                                    title="Choose a Party" append-to-body="true">
                             <ui-select-match placeholder="Select a Party*" class="form-control custom-form-control">
                                 {{$select.selected.name || partyName}}
@@ -27,7 +25,7 @@
 
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <input ng-model="paymentsDetails.amount" type="number" class="form-control custom-form-control"
                                id="amount">
                         <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
@@ -37,7 +35,7 @@
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="">
                         <select class="form-control custom-form-control" ng-model="paymentsDetails.paymentType">
                             <option value="">Payment Type *</option>
                             <option>NEFT</option>
@@ -55,7 +53,7 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12 styling-input-list">
+                    <div class="styling-input-list">
                         <textarea ng-model="paymentsDetails.description" type="textarea"
                                   class="form-control custom-form-control"
                                   id="description"></textarea>
@@ -67,13 +65,12 @@
             </div>
             <div class="clearfix"></div>
 
-            <div class="col-xs-4 col-xs-push-4">
+            <div class="col-xs-6 col-xs-push-3">
                 <div class="alert alert-danger" role="alert" ng-show="paymentsDetails.error.length">
                     <ul>
                         <li ng-repeat="error in paymentsDetails.error">{{error}}</li>
                     </ul>
                 </div>
-
                 <div class="alert alert-success" role="alert" ng-show="paymentsDetails.success.length">
                     <ul>
                         <li ng-repeat="success in paymentsDetails.success">{{success}}</li>
