--- a/client/views/partials/routeConfig/addRouteConfig.html
+++ b/client/views/partials/routeConfig/addRouteConfig.html
@@ -1,40 +1,41 @@
 <div class="main-right col-xs-12" ng-controller="AddEditConfigCtrl">
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{pageTitle}}</h2>
-        <div class="form-group col-xs-12">
-            <div class="col-xs-12 styling-input-list">
-                <input ng-model="route.name" type="text" class="form-control custom-form-control">
-                <label class="focus-effect-for-input" aria-hidden="true">Name*</label>
+        <div class="col-sm-6 col-xs-12">
+            <div class="form-group col-xs-12">
+                <div class="styling-input-list">
+                    <input ng-model="route.name" type="text" class="form-control custom-form-control">
+                    <label class="focus-effect-for-input" aria-hidden="true">Name*</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group col-xs-12">
-            <div class="col-xs-12 styling-input-list">
-                <input ng-model="route.distance" type="text" class="form-control custom-form-control">
-                <label class="focus-effect-for-input" aria-hidden="true">Expected distance*</label>
-            </div>
-        </div>
-        <div class="form-group col-xs-12">
-            <div class="col-xs-12 styling-input-list">
-                <input id="source" type="text" class="form-control custom-form-control" placeholder="Source*"
-                       ng-model="route.source.address">
-                <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
-                <div class="input-group-btn">
-                    <button type="button" class="button" ng-click="showMapDialog('source')">
-                        <span class="glyphicon glyphicon-map-marker"></span>
-                    </button>
+            <div class="form-group col-xs-12">
+                <div class="styling-input-list">
+                    <input ng-model="route.distance" type="text" class="form-control custom-form-control">
+                    <label class="focus-effect-for-input" aria-hidden="true">Expected distance*</label>
                 </div>
             </div>
         </div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="form-group col-xs-12">
+                <div class="styling-input-list">
+                    <input id="source" type="text" class="form-control custom-form-control" placeholder="Source*"
+                           ng-model="route.source.address">
+                    <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
+                        <div class="mapIcon" ng-click="showMapDialog('source')">
+                            <span class="glyphicon glyphicon-map-marker"></span>
+                        </div>
+                </div>
+            </div>
 
-        <div class="form-group col-xs-12">
-            <div class="col-xs-12 styling-input-list">
-                <input id="destination" type="text" class="form-control custom-form-control" placeholder="Destination*"
-                       ng-model="route.destination.address">
-                <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
-                <div class="input-group-btn">
-                    <button type="button" class="button" ng-click="showMapDialog('destination')">
-                        <span class="glyphicon glyphicon-map-marker"></span>
-                    </button>
+            <div class="form-group col-xs-12">
+                <div class="styling-input-list">
+                    <input id="destination" type="text" class="form-control custom-form-control"
+                           placeholder="Destination*"
+                           ng-model="route.destination.address">
+                    <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
+                        <div class="mapIcon" ng-click="showMapDialog('destination')">
+                            <span class="glyphicon glyphicon-map-marker"></span>
+                        </div>
                 </div>
             </div>
         </div>
